# web_shop

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: coverage.yml
docs/: PROJECT_REPORT.md
docs/diagrams/: auth-sequence.md  sequences.md  use-case.md
docs/source/: api.rst  conf.py
src/api/: Dockerfile  config.py  main.py  schemas.py  test_integration.py
src/api/app/: dependencies.py  main.py
src/api/app/core/: config.py  exceptions.py  security.py
src/api/app/db/: __init__.py  queries.py  setup.py
src/api/app/models/: models.py
src/api/app/routers/: auth.py  manager.py  sales.py
src/api/app/schemas/: schemas.py
src/api/app/services/: emailSenderService.py
src/api/database/: __init__.py  models.py  queries.py  setup.py
src/api/migrations/: env.py
src/api/migrations/versions/: 55dcac349bff_.py  b0cd701102d3_.py  c8d9e0f1a2b3_rename_roots_to_permissions.py  db3f4a6aa279_.py
src/api/routers/: auth.py  manager.py
src/api/tests/: conftest.py
src/api/tests/component/: test_queries.py
src/api/tests/integration/: test_auth.py  test_filters.py  test_manager.py  test_sales.py
src/api/tests/unit/: test_models.py
src/api/utils/: jwt.py
src/frontend/: index.html  script.js  styles.css
src/receipt-pdf-generator/: LICENSE  README.md  pyproject.toml
src/receipt-pdf-generator/src/receipt_pdf_generator/: __init__.py  receipt_pdf.py
src/receipt-pdf-generator/src/receipt_pdf_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
