[project]
name = "web-shop"
version = "0.1.0"
description = "A simple web shop application."
authors = [
    { name = "Myasnikov Vadim", email = "zpenr@bk.ru" }
]
requires-python = ">=3.12.3"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "pyjwt[crypto]",
    "bcrypt",
    "alembic",
    "receipt-pdf-generator"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]
docs = [
    "sphinx", 
    "sphinx-rtd-theme", 
    "myst-parser", 
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-openapi"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]